fix sponsors on mobile - only one sponsor was seen

--- a/assets/scss/_sponsors.scss
+++ b/assets/scss/_sponsors.scss
@@ -10,4 +10,11 @@
     max-width: 10rem;
   }
 
+  @media (max-width: 768px) {
+    .sponsors-row {
+      display: grid;
+    }
+  }
+
+
 }
